--- a/index.html
+++ b/index.html
@@ -1,7 +1,155 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+    <title>Systelab Open Source Program Office</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <style>
+        .icon-text {
+            font-size: 80px !important;
+        }
+
+        .featurette-divider {
+            margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+        }
+
+    </style>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"
+          integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">Systelab Open Source Program Office</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    </div>
+</nav>
+
+
+<div class="row mb-4">
+    <div class="col-md-12">
+        <div class="bg-primary">
+            <div class="text-white text-center d-flex align-items-center py-5 px-4">
+                <div class="w-100">
+                    <h1 class="card-title pt-3 mb-5 font-bold"><strong>Building Open Source for Everyone</strong></h1>
+                    <p class="mx-5 mb-5">Collaboration, community, and curiosity - essential ingredients to a vibrant open source community and part of Systelab's culture.
+                        Systelab's developers participate in a wide variety of open source projects through technical contributions, community leadership, and project innovation.</p>
+                    <a class="btn btn-outline-light"><i class="fab fa-github left"></i> View in GitHub</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="container">
+    <div class="row text-center"><br>
+        <div class="col-md-2 col-sm-2">
+        </div>
+        <div class="col-md-4 col-sm-4">
+            <i class="fab fa-angular" style="font-size:100px; color:red; padding-top: 42px; padding-bottom: 34px;"></i>
+            <h3>Seed Angular</h3>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+        </div>
+        <div class="col-md-4 col-sm-4">
+            <i class="fas fa-desktop text-success pt-5 pb-5 icon-text"></i>
+            <h3>Seed Qt</h3>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+        </div>
+    </div>
+</div>
+
+
+<div class="container">
+    <div class="row text-center"><br>
+        <div class="col-md-4 col-sm-4">
+            <i class="fas fa-coffee text-primary pt-5 pb-5 icon-text"></i>
+            <h3>Seed JEE</h3>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+        </div>
+        <div class="col-md-4 col-sm-4">
+            <i class="fab fa-microsoft text-warning pt-5 pb-5 icon-text"></i>
+            <h3>Seed .NET</h3>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+        </div>
+        <div class="col-md-4 col-sm-4">
+            <i class="fab fa-cuttlefish text-info pt-5 pb-5 icon-text"></i>
+            <h3>Seed C++</h3>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+        </div>
+    </div>
+</div>
+
+
+<div class="row mb-4 mt-5">
+    <div class="col-md-12">
+        <div class="bg-primary">
+            <div class="text-white text-center d-flex align-items-center py-4 px-4">
+                <div class="w-100">
+                    <h1 class="card-title pt-3 mb-5 font-bold"><strong>Vibrant communities</strong></h1>
+                    <p class="mx-5 mb-5">Systelab's developers participate in different communities in several areas of interest, sharing their knowledge.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="container">
+    <div class="row featurette">
+        <div class="col-md-2 order-md-1">
+            <i class="fab fa-angular" style="font-size:100px; color:red;"></i>
+        </div>
+        <div class="col-md-10 order-md-2">
+            <h2>Angular community.</h2>
+            <p>There is a big interest in Systelab in all the Angular related technologies as this front-end framework is the most used in the company.</p>
+            <p>Apart form the <a href="https://github.com/systelab/seed-angular">Angular Project Seed</a> that help us quickly bootstrap our projects and dev environment, we are working in several open libraries that we share across the projects.</p>
+            <p><a href="https://github.com/systelab/systelab-components">systelab-components</a> is a library with common UI components to speed up your Angular developments.</p>
+            <p><a href="https://github.com/systelab/systelab-preferences">systelab-preferences</a> is a library with utilities to manage the application preferences, <a href="https://github.com/systelab/systelab-translate">systelab-translate</a> is a library with i18n utilities to manage the application localization, and  <a href="https://github.com/systelab/systelab-login">systelab-login</a> is a library with usefull login components. </p>
+        </div>
+    </div>
+</div>
+
+<hr class="featurette-divider m-3">
+<div class="container">
+    <div class="row featurette">
+        <div class="col-md-2 order-md-2 text-right">
+            <i class="fab fa-phabricator" style="font-size:100px; color:green;"></i>
+        </div>
+        <div class="col-md-10 order-md-1">
+            <h2>Automated Application Development community.</h2>
+            <p>Automate the Software Development Life cycle to reduce maintenance costs, increase product quality, and improve project productivity is key to our business.</p>
+            <p>Focus on instrumentation and integration when implementing your automated application development (<a href="https://es.slideshare.net/Info-Tech/automate-your-software-development-life-cycle-using-the-right-tools">AAD</a>) tools, will help you to reduce maintenance costs, increase product quality, and improve project productivity.</p>
+            <p>Apart form the defining an strategy for our internal projects, the community is leading a <a href="https://github.com/systelab/jama-api">Jama API</a> and a <a href="https://github.com/systelab/jama-client">Jama Client</a> project in order to report the automatic test results.</p>
+        </div>
+    </div>
+</div>
+
+
+<footer class="bg-primary mt-4" style="height:100px;">
+</footer>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
+        crossorigin="anonymous"></script>
 </body>
 </html>
