--- a/index.html
+++ b/index.html
@@ -27,23 +27,18 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="#">Systelab Open Source Program Office</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    </div>
 </nav>
 
 
-<div class="row mb-4">
-    <div class="col-md-12">
-        <div class="bg-primary">
+<div class="container-fluid bg-primary">
+    <div class="row mb-4">
+        <div class="col-md-12">
             <div class="text-white text-center d-flex align-items-center py-5 px-4">
                 <div class="w-100">
                     <h1 class="card-title pt-3 mb-5 font-bold"><strong>Building Open Source for Everyone</strong></h1>
                     <p class="mx-5 mb-5">Collaboration, community, and curiosity - essential ingredients to a vibrant open source community and part of Systelab's culture.
-                        Systelab's developers participate in a wide variety of open source projects through technical contributions, community leadership, and project innovation.</p>
+                        Systelab's developers participate in a wide variety of open source projects through technical contributions, community leadership, and project
+                        innovation.</p>
                     <a class="btn btn-outline-light"><i class="fab fa-github left"></i> View in GitHub</a>
                 </div>
             </div>
@@ -96,9 +91,9 @@
 </div>
 
 
-<div class="row mb-4 mt-5">
-    <div class="col-md-12">
-        <div class="bg-primary">
+<div class="container-fluid bg-primary">
+    <div class="row mb-4 mt-5">
+        <div class="col-md-12">
             <div class="text-white text-center d-flex align-items-center py-4 px-4">
                 <div class="w-100">
                     <h1 class="card-title pt-3 mb-5 font-bold"><strong>Vibrant communities</strong></h1>
@@ -109,7 +104,6 @@
     </div>
 </div>
 
-
 <div class="container">
     <div class="row featurette">
         <div class="col-md-2 order-md-1">
@@ -118,9 +112,12 @@
         <div class="col-md-10 order-md-2">
             <h2>Angular community.</h2>
             <p>There is a big interest in Systelab in all the Angular related technologies as this front-end framework is the most used in the company.</p>
-            <p>Apart form the <a href="https://github.com/systelab/seed-angular">Angular Project Seed</a> that help us quickly bootstrap our projects and dev environment, we are working in several open libraries that we share across the projects.</p>
+            <p>Apart form the <a href="https://github.com/systelab/seed-angular">Angular Project Seed</a> that help us quickly bootstrap our projects and dev environment, we are
+                working in several open libraries that we share across the projects.</p>
             <p><a href="https://github.com/systelab/systelab-components">systelab-components</a> is a library with common UI components to speed up your Angular developments.</p>
-            <p><a href="https://github.com/systelab/systelab-preferences">systelab-preferences</a> is a library with utilities to manage the application preferences, <a href="https://github.com/systelab/systelab-translate">systelab-translate</a> is a library with i18n utilities to manage the application localization, and  <a href="https://github.com/systelab/systelab-login">systelab-login</a> is a library with usefull login components. </p>
+            <p><a href="https://github.com/systelab/systelab-preferences">systelab-preferences</a> is a library with utilities to manage the application preferences, <a
+                    href="https://github.com/systelab/systelab-translate">systelab-translate</a> is a library with i18n utilities to manage the application localization, and <a
+                    href="https://github.com/systelab/systelab-login">systelab-login</a> is a library with usefull login components. </p>
         </div>
     </div>
 </div>
@@ -134,8 +131,11 @@
         <div class="col-md-10 order-md-1">
             <h2>Automated Application Development community.</h2>
             <p>Automate the Software Development Life cycle to reduce maintenance costs, increase product quality, and improve project productivity is key to our business.</p>
-            <p>Focus on instrumentation and integration when implementing your automated application development (<a href="https://es.slideshare.net/Info-Tech/automate-your-software-development-life-cycle-using-the-right-tools">AAD</a>) tools, will help you to reduce maintenance costs, increase product quality, and improve project productivity.</p>
-            <p>Apart form the defining an strategy for our internal projects, the community is leading a <a href="https://github.com/systelab/jama-api">Jama API</a> and a <a href="https://github.com/systelab/jama-client">Jama Client</a> project in order to report the automatic test results.</p>
+            <p>Focus on instrumentation and integration when implementing your automated application development (<a
+                    href="https://es.slideshare.net/Info-Tech/automate-your-software-development-life-cycle-using-the-right-tools">AAD</a>) tools, will help you to reduce
+                maintenance costs, increase product quality, and improve project productivity.</p>
+            <p>Apart form the defining an strategy for our internal projects, the community is leading a <a href="https://github.com/systelab/jama-api">Jama API</a> and a <a
+                    href="https://github.com/systelab/jama-client">Jama Client</a> project in order to report the automatic test results.</p>
         </div>
     </div>
 </div>
