--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
 </nav>
 
 
-<div class="container-fluid bg-primary">
-    <div class="row mb-4">
-        <div class="col-md-12">
-            <div class="text-white text-center d-flex align-items-center py-5 px-4">
-                <div class="w-100">
-                    <h1 class="card-title pt-3 mb-5 font-bold"><strong>Building Open Source for Everyone</strong></h1>
-                    <p class="mx-5 mb-5">Collaboration, community, and curiosity - essential ingredients to a vibrant open source community and part of Systelab's culture.
-                        Systelab's developers participate in a wide variety of open source projects through technical contributions, community leadership, and project
-                        innovation.</p>
-                    <a class="btn btn-outline-light"><i class="fab fa-github left"></i> View in GitHub</a>
+<div class="bg-primary">
+    <div class="container">
+        <div class="row mb-4">
+            <div class="col-md-12">
+                <div class="text-white text-center d-flex align-items-center py-5 px-4">
+                    <div class="w-100">
+                        <h1 class="card-title pt-3 mb-5 font-bold"><strong>Building Open Source for Everyone</strong></h1>
+                        <p class="mx-5 mb-5">Collaboration, community, and curiosity - essential ingredients to a vibrant open source community and part of Systelab's culture.
+                            Systelab's developers participate in a wide variety of open source projects through technical contributions, community leadership, and project
+                            innovation.</p>
+                        <a href="https://github.com/systelab" class="btn btn-outline-light"><i class="fab fa-github left"></i> View in GitHub</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -54,14 +56,12 @@
         <div class="col-md-4 col-sm-4">
             <i class="fab fa-angular" style="font-size:100px; color:red; padding-top: 42px; padding-bottom: 34px;"></i>
             <h3>Seed Angular</h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-                Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+            <p>A skeleton for an Angular 5 front-end application, using the different libraries that we internally develop and promote at Systelab. E2E Test is done using Karma and Allure. Instructions for 'electronize' the solution are also provided.</p>
         </div>
         <div class="col-md-4 col-sm-4">
             <i class="fas fa-desktop text-success pt-5 pb-5 icon-text"></i>
             <h3>Seed Qt</h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-                Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+            <p>A skeleton for a QT front-end application, using the different best-practices that we internally promote at Systelab.</p>
         </div>
     </div>
 </div>
@@ -72,37 +72,39 @@
         <div class="col-md-4 col-sm-4">
             <i class="fas fa-coffee text-primary pt-5 pb-5 icon-text"></i>
             <h3>Seed JEE</h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-                Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+            <p>A skeleton for a JEE back-end application, using Bean Validation, JAXB, CDI, JPA, EJB, JAX-RS and Swagger. Security is done with JWT.
+                Component test is done using JUnit and Allure.</p>
         </div>
         <div class="col-md-4 col-sm-4">
             <i class="fab fa-microsoft text-warning pt-5 pb-5 icon-text"></i>
             <h3>Seed .NET</h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-                Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+            <p>A skeleton for a .NET back-end application, using .NET Core 2.0.0, Entity Framework Core 6.0 and Swagger. Security is done with JWT.
+                Component test is done using xUnit, Moq and Allure.</p>
         </div>
         <div class="col-md-4 col-sm-4">
             <i class="fab fa-cuttlefish text-info pt-5 pb-5 icon-text"></i>
             <h3>Seed C++</h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-                Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+            <p>A skeleton for a C++ application, using the different best-practices that we internally promote at Systelab.</p>
         </div>
     </div>
 </div>
 
 
-<div class="container-fluid bg-primary">
-    <div class="row mb-4 mt-5">
-        <div class="col-md-12">
-            <div class="text-white text-center d-flex align-items-center py-4 px-4">
-                <div class="w-100">
-                    <h1 class="card-title pt-3 mb-5 font-bold"><strong>Vibrant communities</strong></h1>
-                    <p class="mx-5 mb-5">Systelab's developers participate in different communities in several areas of interest, sharing their knowledge.</p>
+<div class="bg-primary">
+    <div class="container">
+        <div class="row mb-4 mt-5">
+            <div class="col-md-12">
+                <div class="text-white text-center d-flex align-items-center pt-3 px-4">
+                    <div class="w-100">
+                        <h1 class="card-title pt-3 mb-5 font-bold"><strong>Vibrant communities</strong></h1>
+                        <p class="mx-5 mb-5">Systelab's developers participate in different communities in several areas of interest, sharing their knowledge.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
 <div class="container">
     <div class="row featurette">
@@ -121,6 +123,7 @@
         </div>
     </div>
 </div>
+
 
 <hr class="featurette-divider m-3">
 <div class="container">
