--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <div class="col-md-4 col-sm-4">
             <i class="fab fa-angular" style="font-size:100px; color:red; padding-top: 42px; padding-bottom: 34px;"></i>
             <h3>Seed Angular</h3>
-            <p>A skeleton for an Angular 5 front-end application, using the different libraries that we internally develop and promote at Systelab. E2E Test is done using Karma and Allure. Instructions for 'electronize' the solution are also provided.</p>
+            <p>A <a href="https://github.com/systelab/seed-angular">skeleton</a> for an Angular 5 front-end application, using the different libraries that we internally develop and promote at Systelab. E2E Test is done using Karma and Allure. Instructions for 'electronize' the solution are also provided.</p>
         </div>
         <div class="col-md-4 col-sm-4">
             <i class="fas fa-desktop text-success pt-5 pb-5 icon-text"></i>
             <h3>Seed Qt</h3>
-            <p>A skeleton for a QT front-end application, using the different best-practices that we internally promote at Systelab.</p>
+            <p>A <a href="https://github.com/systelab/seed-qt">skeleton</a> for a QT front-end application, using the different best-practices that we internally promote at Systelab.</p>
         </div>
     </div>
 </div>
@@ -72,19 +72,19 @@
         <div class="col-md-4 col-sm-4">
             <i class="fas fa-coffee text-primary pt-5 pb-5 icon-text"></i>
             <h3>Seed JEE</h3>
-            <p>A skeleton for a JEE back-end application, using Bean Validation, JAXB, CDI, JPA, EJB, JAX-RS and Swagger. Security is done with JWT.
+            <p>A <a href="https://github.com/systelab/seed-jee">skeleton</a> for a JEE back-end application, using Bean Validation, JAXB, CDI, JPA, EJB, JAX-RS and Swagger. Security is done with JWT.
                 Component test is done using JUnit and Allure.</p>
         </div>
         <div class="col-md-4 col-sm-4">
             <i class="fab fa-microsoft text-warning pt-5 pb-5 icon-text"></i>
             <h3>Seed .NET</h3>
-            <p>A skeleton for a .NET back-end application, using .NET Core 2.0.0, Entity Framework Core 6.0 and Swagger. Security is done with JWT.
+            <p>A <a href="https://github.com/systelab/seed-dotnet">skeleton</a> for a .NET back-end application, using .NET Core 2.0.0, Entity Framework Core 6.0 and Swagger. Security is done with JWT.
                 Component test is done using xUnit, Moq and Allure.</p>
         </div>
         <div class="col-md-4 col-sm-4">
             <i class="fab fa-cuttlefish text-info pt-5 pb-5 icon-text"></i>
             <h3>Seed C++</h3>
-            <p>A skeleton for a C++ application, using the different best-practices that we internally promote at Systelab.</p>
+            <p>A <a href="https://github.com/systelab/seed-cpp">skeleton</a> for a C++ application, using the different best-practices that we internally promote at Systelab.</p>
         </div>
     </div>
 </div>
@@ -116,7 +116,7 @@
             <p>There is a big interest in Systelab in all the Angular related technologies as this front-end framework is the most used in the company.</p>
             <p>Apart form the <a href="https://github.com/systelab/seed-angular">Angular Project Seed</a> that help us quickly bootstrap our projects and dev environment, we are
                 working in several open libraries that we share across the projects.</p>
-            <p><a href="https://github.com/systelab/systelab-components">systelab-components</a> is a library with common UI components to speed up your Angular developments.</p>
+            <p><a href="https://github.com/systelab/systelab-components">systelab-components</a> is a library with <a href="https://systelab.github.io/systelab-components-dist/">common UI components</a> to speed up your Angular developments.</p>
             <p><a href="https://github.com/systelab/systelab-preferences">systelab-preferences</a> is a library with utilities to manage the application preferences, <a
                     href="https://github.com/systelab/systelab-translate">systelab-translate</a> is a library with i18n utilities to manage the application localization, and <a
                     href="https://github.com/systelab/systelab-login">systelab-login</a> is a library with usefull login components. </p>
