--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             <p>Apart form the <a href="https://github.com/systelab/seed-angular">Angular Project Seed</a> that help us quickly bootstrap our projects and dev environment, we are
                 working in several open libraries that we share across the projects.</p>
             <p><a href="https://github.com/systelab/systelab-components">systelab-components</a> is a library with <a href="https://systelab.github.io/components">common UI components</a> to speed up your Angular developments.</p>
+            <p><a href="https://github.com/systelab/systelab-charts">systelab-charts</a> is a library with <a href="https://systelab.github.io/charts">common charts</a> to be used in your application.</p>
             <p><a href="https://github.com/systelab/systelab-preferences">systelab-preferences</a> is a library with utilities to manage the application preferences, <a
                     href="https://github.com/systelab/systelab-translate">systelab-translate</a> is a library with i18n utilities to manage the application localization, and <a
                     href="https://github.com/systelab/systelab-login">systelab-login</a> is a library with usefull login components. </p>
