--- a/charts/index.html
+++ b/charts/index.html
@@ -1,1 +1,43 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Systelab Components Library</title>
 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Systelab Components library for Angular applications">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="application-name" content="systelab-components">
+  <meta name="apple-mobile-web-app-title" content="systelab-components">
+  <meta name="theme-color" content="#158fef">
+  <meta name="msapplication-navbutton-color" content="#158fef">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <base href="/">
+
+  <link rel="icon" type="image/png" href="favicon.png">
+  <style>
+    html {
+      padding: 0;
+      overflow: hidden;
+      margin: 0;
+      height: 100%;
+      background-color: white !important;
+      -webkit-overflow-scrolling: touch;
+    }
+    body {
+      padding: 0;
+      overflow: hidden;
+      margin: 0;
+      height: 100%;
+      background-color: white !important;
+      -webkit-overflow-scrolling: touch;
+      overflow-x: hidden;
+    }
+  </style>
+</head>
+<body>
+  <app-root></app-root>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+</html>
