--- a/charts/index.html
+++ b/charts/index.html
@@ -14,7 +14,7 @@
   <meta name="theme-color" content="#158fef">
   <meta name="msapplication-navbutton-color" content="#158fef">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <base href="/">
+  <base href="/charts/">
 
   <link rel="icon" type="image/png" href="favicon.png">
   <style>
