--- a/index.html
+++ b/index.html
@@ -132,14 +132,34 @@
             <h2>Angular community.</h2>
             <p>There is a big interest in Systelab in all the Angular related technologies as this front-end framework is the most used in the company.</p>
             <p>Apart form the <a href="https://github.com/systelab/seed-angular">Angular Project Seed</a> that help us quickly bootstrap our projects and dev environment, we are
-                working in a generator and in several open libraries that we share across the projects</p>
-            <p><a href="https://github.com/systelab/generator-systelab-angular">generator-systelab-angular</a> is a Yeoman generator that completely scaffolds out a new project.</p>
-            <p><a href="https://github.com/systelab/generator-systelab-angular-lib">generator-systelab-angular-lib</a> is a Yeoman generator that completely scaffolds out a new systelab library.</p>
-            <p><a href="https://github.com/systelab/systelab-components">systelab-components</a> is a library with <a href="https://systelab.github.io/components">common UI components</a> to speed up your Angular developments.</p>
-            <p><a href="https://github.com/systelab/systelab-charts">systelab-charts</a> is a library with <a href="https://systelab.github.io/charts">common charts</a> to be used in your application.</p>
-            <p><a href="https://github.com/systelab/systelab-preferences">systelab-preferences</a> is a library with utilities to manage the application preferences, <a
+                working in a generator and in several open libraries that we share across the projects.</p>
+            <ul>
+            <li><a href="https://github.com/systelab/generator-systelab-angular">generator-systelab-angular</a> is a Yeoman generator that completely scaffolds out a new project, and <a href="https://github.com/systelab/generator-systelab-angular-lib">generator-systelab-angular-lib</a> is a Yeoman generator that completely scaffolds out a new systelab library.</li>
+            <li><a href="https://github.com/systelab/systelab-components">systelab-components</a> is a library with <a href="https://systelab.github.io/components">common UI components</a> to speed up your Angular developments.</li>
+            <li><a href="https://github.com/systelab/systelab-charts">systelab-charts</a> is a library with <a href="https://systelab.github.io/charts">common charts</a> to be used in your application.</li>
+            <li><a href="https://github.com/systelab/systelab-preferences">systelab-preferences</a> is a library with utilities to manage the application preferences, <a
                     href="https://github.com/systelab/systelab-translate">systelab-translate</a> is a library with i18n utilities to manage the application localization, and <a
-                    href="https://github.com/systelab/systelab-login">systelab-login</a> is a library with usefull login components. </p>
+                    href="https://github.com/systelab/systelab-login">systelab-login</a> is a library with usefull login components. </li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<hr class="featurette-divider m-3">
+<div class="container">
+    <div class="row featurette">
+        <div class="col-md-2 order-md-2 text-rigth">
+            <i class="fas fa-microchip text-info" style="font-size:100px;"></i>
+        </div>
+        <div class="col-md-10 order-md-1">
+            <h2>C++ community.</h2>
+            <p>As Instruments Manufacturers, there is a big interest in C++ related technologies in the back-end.</p>
+            <p>Apart form the <a href="https://github.com/systelab/seed-cpp">C++ Project Seed</a> that help us quickly bootstrap our projects and dev environment, we are
+                working in several open libraries that we share across the projects.</p>
+            <ul>
+                <li><a href="https://github.com/systelab/cpp-db-adapter">cpp-db-adapter</a>, <a href="https://github.com/systelab/cpp-json-adapter">cpp-json-adapter</a> and <a href="https://github.com/systelab/cpp-webserver-adapter">cpp-webserver-adapter</a>.</li>
+                <li><a href="https://github.com/systelab/cpp-sqlite-db-adapter">cpp-sqlite-db-adapter</a>, <a href="https://github.com/systelab/cpp-rapidjson-json-adapter">cpp-rapidjson-json-adapter</a> and <a href="https://github.com/systelab/cpp-boostasio-webserver-adapter">cpp-boostasio-webserver-adapter</a>.</li>
+             </ul>
         </div>
     </div>
 </div>
@@ -148,10 +168,10 @@
 <hr class="featurette-divider m-3">
 <div class="container">
     <div class="row featurette">
-        <div class="col-md-2 order-md-2 text-right">
+        <div class="col-md-2 order-md-1">
             <i class="fab fa-phabricator" style="font-size:100px; color:green;"></i>
         </div>
-        <div class="col-md-10 order-md-1">
+        <div class="col-md-10 order-md-2">
             <h2>Automated Application Development community.</h2>
             <p>Automate the Software Development Life cycle to reduce maintenance costs, increase product quality, and improve project productivity is key to our business.</p>
             <p>Focus on instrumentation and integration when implementing your automated application development (<a
