--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <p class="mb-5">Collaboration, community, and curiosity - essential ingredients to a vibrant open source community and part of Systelab's culture.
                             Systelab's developers participate in a wide variety of open source projects through technical contributions, community leadership, and project
                             innovation.</p>
-                        <a href="https://github.com/systelab" class="btn btn-outline-light"><i class="fab fa-github left"></i> View in GitHub</a>
+                        <a href="https://github.com/systelab" class="btn btn-outline-light"><i class="fab fa-github left"></i> View on GitHub</a>
                     </div>
                 </div>
             </div>
